# plug-n-play-ocr

./: pyproject.toml  requirements.txt  server.py
outputs/: 337fe977-9848-4347-b81b-9386e9c2be86.docx
src/: pdf_to_docx_api.py
